2010-04-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Support `sl_create' inside plain C functions.

	The MT-Alpha target now support the construct; this changeset
	extends the functionality to the sequential C target.

	* tools/lib/t-seqc/slimpl.m4: Deprecate `sl_kill'. Implement new
	`sl_break' semantics (not yet official). This removes the need for
	a linked list of family contexts, so a new child can appear
	disconnected. This allows `sl_create' to appear inside plain C
	functions.

	* tools/lib/t-seqc/include/sl_support.h: Remove the obsolete field.

2010-04-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Adjust place usage in current MT-alpha delegations.

	A new feature was added to the hardware to select the behavior of
	`allocate' using a bit in the place identifier. When the bit is
	*not* set, upon failure allocate returns FID 0. This will be used
	later during automatic deadlock prevention. However, since the
	current code assumes allocate always returns a valid FID, the bit
	needs to be set everywhere for now.

	* lib/include/cstdlib.h,
	* lib/mtalpha-sim/include/svp_asmdiv.h,
	* lib/src/mtalpha/mtdiv.s,
	* lib/src/mtsep.c,
	* tools/bin/spp,
	* tools/lib/t-ppp2alpha/include/sl_support.h: Set bit 3 of place identifiers.

2010-04-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in MT-alpha code generation.

	* tools/lib/t-ppp2alpha/include/sl_support.h: Ensure that the read
	to a shared after sync completes in all cases. This is needed in case
	the `gets' instruction is followed by `ldq' with the same register
	as target ("cannot write to waiting register").

2010-04-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix handling of `slr' argument.

	The `slr' utility needs to recompile code using the same back-end
	as the executed program. This is recognized by a text tag.

	* tools/lib/mtalpha-sim/slrt.s (slr_datatag): Upgrade data tag
	to new back-end name.

2010-04-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in MT-alpha code generation.
