@@ -1,6 +1,6 @@
 # t-ptl/slimpl.m4: this file is part of the SL toolchain.
 # 
-# Copyright (C) 2008,2009 Universiteit van Amsterdam
+# Copyright (C) 2008,2009,2010 Universiteit van Amsterdam
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -106,6 +106,3 @@ m4_define([[sl_kill]],[[uTC::kill([[$1]])]])
 # Pass transparently the break id
 m4_define([[sl_getbr]],[[$1]]_brk)
 
-# Pass transparently function calls
-m4_define([[sl_farg]], [[[[$2]]]])
-m4_define([[sl_funcall]], [[[[$3]](m4_shift3($@))]])
