@@ -1,5 +1,17 @@
 2010-04-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Remove support for `sl_funcall'.
+
+	The construct `sl_funcall' was obsolete for a while already.
+
+	* tools/lib/t-utc/slimpl.m4,
+	* tools/lib/t-utc0/slimpl.m4,
+	* tools/lib/t-ptl/slimpl.m4,
+	* tools/lib/t-pppalpha/slimpl.m4,
+	* tools/lib/t-ppp2alpha/slimpl.m4: Remove `sl_funcall' and `sl_farg'.
+
+2010-04-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Support `sl_create' inside plain C functions.
 
 	The MT-Alpha target now support the construct; this changeset
